feedback button fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <button id="info"><i class="fa-regular fa-comment-dots fa-beat"
+  <button id="feedback"><i class="fa-regular fa-comment-dots fa-beat"
       style="--fa-animation-duration: 1s; --fa-beat-scale: 0.55;"></i></i></i></button>
   <div id="myModal" class="modal">
     <div class="modal-content">
@@ -44,15 +44,15 @@
     <div class="sticky">
       <div id="image-container">
         <div id="image">
-          <image id="backgrounds" src="" />
-          <image id="ears" src="" />
-          <image id="neck" src="" />
-          <image id="nose" src="images/white/nose.png" />
-          <image id="mouth" src="" />
-          <image id="hair" src="" />
-          <image id="accessories" src="" />
-          <image id="eyes" src="" />
-          <image id="leg" src="" />
+          <img id="backgrounds" src="" />
+          <img id="ears" src="" />
+          <img id="neck" src="" />
+          <img id="nose" src="images/white/nose.png" />
+          <img id="mouth" src="" />
+          <img id="hair" src="" />
+          <img id="accessories" src="" />
+          <img id="eyes" src="" />
+          <img id="leg" src="" />
         </div>
         <div id="buttons">
           <button id="random" onclick="random()" tabindex="0"><i class="fa-solid fa-dice fa-shake"
